--- a/eshop1/index.html
+++ b/eshop1/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="karty">
-        <figure class="karta__1">
+        <figure class="karta">
             <h3 class="nazev">Redmi Note 11 4GB/64GB Graphite Grey</h3>
             <header>
                 <div class="nalepky">
@@ -34,7 +34,7 @@
                 <button class="btn"><span class="btn__text">přidat do košíku</span></button>
             </footer>
         </figure>
-        <figure class="karta">
+        <figure class="karta karta__border">
             <h3 class="nazev">Xiaomi Redmi 9A 2GB/32GB zelená</h3>
             <header>
                 <div class="nalepky">
@@ -75,7 +75,7 @@
                 <button class="btn"><span class="btn__text">přidat do košíku</span></button>
             </footer>
         </figure>
-        <figure class="karta">
+        <figure class="karta karta__border">
             <h3 class="nazev">Motorola moto E40 4GB/64GB Dark Cedar</h3>
             <header>
                 <div class="nalepky">
