--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 <body>
     <main class="karty">
         <figure class="karta">
-            <h3 class="nazev">Redmi Note 11 4GB/64GB Graphite Grey</h3>
+            <div class="nazev">Redmi Note 11 4GB/64GB Graphite Grey</div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
@@ -22,20 +22,20 @@
                     <img class="image" src="images/redmi_note_11_grey.jpg">
                 </div>
             </header>
-            <content>
+            <div>
                 <p class="info">Snapdragon 680 / 33W Pro rychlé nabíjení / 50Mpx AI čtyřnásobný fotoaparát / 90Hz</p>
                 <p class="sklad">
                     <strong class="color-green">E-shop skladem > 5 ks</strong>
                     ,odešleme zítra
                 </p>
                 <p class="cena">5 296 Kč</p>
-            </content>
+            </div>
             <footer>
                 <button class="btn"><span class="btn__text">přidat do košíku</span></button>
             </footer>
         </figure>
-        <figure class="karta karta__border">
-            <h3 class="nazev">Xiaomi Redmi 9A 2GB/32GB zelená</h3>
+        <figure class="karta">
+            <div class="nazev">Xiaomi Redmi 9A 2GB/32GB zelená</div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
@@ -56,7 +56,7 @@
                     <img class="image" src="images/redmi_9A_green.jpg">
                 </div>
             </header>
-            <content>
+            <div>
                 <p class="info">
                     <strong class="gift">+ Dárek v ceně 99 Kč:</strong>
                     AUTONABÍJEČKA CELLY S MICROUSB - 1A
@@ -70,13 +70,13 @@
                     <s>2 799 Kč</s>
                     <span>2 690Kč</span>
                 </p>
-            </content>
+            </div>
             <footer>
                 <button class="btn"><span class="btn__text">přidat do košíku</span></button>
             </footer>
         </figure>
-        <figure class="karta karta__border">
-            <h3 class="nazev">Motorola moto E40 4GB/64GB Dark Cedar</h3>
+        <figure class="karta">
+            <div class="nazev">Motorola moto E40 4GB/64GB Dark Cedar</div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
@@ -94,7 +94,7 @@
                     <img class="image" src="images/Motorola_moto_E40_Dark_cedar.png">
                 </div>
             </header>
-            <content>
+            <div>
                 <p class="info">Vyzdvihněte svou tvořivost s moto E40 Motorola moto E40 Systém tří fotoaparátů s</p>
                 <p class="sklad">
                     <strong class="color-green">E-shop skladem > 10 ks</strong>
@@ -104,7 +104,7 @@
                     <s>3 499Kč</s>
                     <span>3 290Kč</span>
                 </p>
-            </content>
+            </div>
             <footer>
                 <button class="btn"><span class="btn__text">přidat do košíku</span></button>
             </footer>
