--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="karty">
         <figure class="karta">
-            <div class="nazev">Redmi Note 11 4GB/64GB Graphite Grey</div>
+            <div class="nazev"><a>Redmi Note 11 4GB/64GB Graphite Grey</a></div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
@@ -35,7 +35,7 @@
             </footer>
         </figure>
         <figure class="karta">
-            <div class="nazev">Xiaomi Redmi 9A 2GB/32GB zelená</div>
+            <div class="nazev"><a>Xiaomi Redmi 9A 2GB/32GB zelená</a></div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
@@ -76,7 +76,7 @@
             </footer>
         </figure>
         <figure class="karta">
-            <div class="nazev">Motorola moto E40 4GB/64GB Dark Cedar</div>
+            <div class="nazev"><a>Motorola moto E40 4GB/64GB Dark Cedar</a></div>
             <header>
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
