--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,16 +11,14 @@
 <body>
     <main class="karty">
         <figure class="karta">
-            <div class="nazev"><a>Redmi Note 11 4GB/64GB Graphite Grey</a></div>
-            <header>
+            <a href="#"><div class="nazev">Redmi Note 11 4GB/64GB Graphite Grey</div></a>
+            <header class="karta__header">
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
                         Doprava zdarma
                     </div>
                 </div>
-                <div class="holder">
-                    <img class="image" src="images/redmi_note_11_grey.jpg">
-                </div>
+                    <img class="image" src="images/redmi_note_11_grey.jpg" alt="note 11 grey">
             </header>
             <div>
                 <p class="info">Snapdragon 680 / 33W Pro rychlé nabíjení / 50Mpx AI čtyřnásobný fotoaparát / 90Hz</p>
@@ -31,12 +29,12 @@
                 <p class="cena">5 296 Kč</p>
             </div>
             <footer>
-                <button class="btn"><span class="btn__text">přidat do košíku</span></button>
+                <a href="#" class="btn"><span class="btn__text">přidat do košíku</span></a>
             </footer>
         </figure>
         <figure class="karta">
-            <div class="nazev"><a>Xiaomi Redmi 9A 2GB/32GB zelená</a></div>
-            <header>
+            <a href="#"><div class="nazev">Redmi 9A 2GB/32GB green</div></a>
+            <header class="karta__header">
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
                         Doprava zdarma
@@ -45,16 +43,12 @@
                         Dárek zdarma
                     </div>
                 </div>
-                <div class="sleva__holder">
                     <div class="sleva">
                         <div class="sleva__text">
                             -6%
                         </div>
                     </div>
-                </div>
-                <div class="holder">
-                    <img class="image" src="images/redmi_9A_green.jpg">
-                </div>
+                    <img class="image" src="images/redmi_9A_green.jpg" alt="redmi 9A green">
             </header>
             <div>
                 <p class="info">
@@ -64,7 +58,7 @@
                 <p class="sklad">
                     <strong class="color-green">E-shop skladem > 10 ks</strong>
                     ,odešleme dnes + nyní skladem na
-                    <a class="color-green" href="#"><strong>1 prodejně</strong></a>
+                    <a href="#" class="color-green"><strong>1 prodejně</strong></a>
                 </p>
                 <p class="cena">
                     <s>2 799 Kč</s>
@@ -72,12 +66,12 @@
                 </p>
             </div>
             <footer>
-                <button class="btn"><span class="btn__text">přidat do košíku</span></button>
+                <a href="#" class="btn"><span class="btn__text">přidat do košíku</span></a>
             </footer>
         </figure>
         <figure class="karta">
-            <div class="nazev"><a>Motorola moto E40 4GB/64GB Dark Cedar</a></div>
-            <header>
+            <a href="#"><div class="nazev">Motorola moto E40 4GB/64GB Dark Cedar</div></a>
+            <header class="karta__header">
                 <div class="nalepky">
                     <div class="nalepka nalepka-y">
                         Doprava zdarma
@@ -91,7 +85,7 @@
                     </div>
                 </div>
                 <div class="holder">
-                    <img class="image" src="images/Motorola_moto_E40_Dark_cedar.png">
+                    <img class="image" src="images/Motorola_moto_E40_Dark_cedar.png" alt="Motorola moto E40 Dark cedar">
                 </div>
             </header>
             <div>
@@ -106,7 +100,7 @@
                 </p>
             </div>
             <footer>
-                <button class="btn"><span class="btn__text">přidat do košíku</span></button>
+                <a href="#" class="btn"><span class="btn__text">přidat do košíku</span></a>
             </footer>
         </figure>
     </main>
